--- a/clover/www/index.html
+++ b/clover/www/index.html
@@ -1,6 +1,6 @@
 <title>Clover Drone Kit Tools</title>
 
-<h1>Clover Drone Kit Tools</h1>
+<h1>Drone Kit Tools</h1>
 
 <ul>
 	<li><a href="docs">View documentation</a> (snapshot of <a href="https://clover.coex.tech">clover.coex.tech</a>)</li>
