--- a/drone/www/index.html
+++ b/drone/www/index.html
@@ -1,6 +1,6 @@
-<title>Drone Kit Tools</title>
+<title>Tools</title>
 
-<h1>Drone Kit Tools</h1>
+<h1>Tools</h1>
 
 <ul>
 	<li><a href="docs/ru">View documentation</a></li>
